--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-scikit-learn==0.21.0
+scikit-learn
 opencv-python
 Cython
 numba
@@ -9,5 +9,5 @@ scipy
 pyquaternion
 nuscenes-devkit
 pyyaml
-motmetrics==1.1.3
+motmetrics
 tensorboardx
